<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_menu_hamburger"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/main_activity_manager"
        app:layout_constraintBottom_toTopOf="@id/container_main_actions"
        app:layout_constraintStart_toStartOf="@id/container_main_actions" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/main_activity_date"
        app:layout_constraintBottom_toTopOf="@id/container_main_actions"
        app:layout_constraintEnd_toEndOf="@id/container_main_actions" />

    <LinearLayout
        android:id="@+id/container_main_actions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_rounded_card"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_title">

        <TextView
            android:id="@+id/tv_main_action_create_deposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:paddingStart="16dp"
            android:paddingTop="40dp"
            android:paddingEnd="16dp"
            android:paddingBottom="40dp"
            android:text="@string/main_activity_item_deposit"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:drawableStartCompat="@drawable/ic_coin" />

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/tv_main_action_create_loan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:paddingStart="16dp"
            android:paddingTop="40dp"
            android:paddingEnd="16dp"
            android:paddingBottom="40dp"
            android:text="@string/main_activity_item_loan"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:drawableStartCompat="@drawable/ic_give_loan" />

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/tv_main_action_clients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:paddingStart="16dp"
            android:paddingTop="40dp"
            android:paddingEnd="16dp"
            android:paddingBottom="40dp"
            android:text="@string/main_activity_item_clients"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:drawableStartCompat="@drawable/ic_clients" />

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/tv_main_action_contracts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:paddingStart="16dp"
            android:paddingTop="40dp"
            android:paddingEnd="16dp"
            android:paddingBottom="40dp"
            android:text="@string/main_activity_item_contracts"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:drawableStartCompat="@drawable/ic_contracts" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>